--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Cookly</string>
+    <string name="favorite_item_deletion_dialog_text">Are you sure you want to delete?</string>
+    <string name="favorite_item_deletion_dialog_positive_button">Yes</string>
+    <string name="favorite_item_deletion_dialog_negative_button">No</string>
 </resources>
